--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <title>JNW031 - Personal Website</title>
+    <title>JNW031 - Persönliche Website</title>
     <link rel="shortcut icon" href="./favicon.ico" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Slab:700'>
@@ -6780,19 +6780,19 @@
     <div class="container">
         <div class="template color-yellow" data-template="home">
             <main>
-                <h1><span>一个 <mark> 13 岁 </mark> 的</span><span>程序员</span></h1>
+                <h1><span>Eins <mark> 13 Jahre alt </mark> von</span><span>Programmierer</span></h1>
                 <div class="p"><span>lubswang@outlook.com</span><span>QQ：545904841 | Cnblogs：jnw031</span></div>
                 <div class="links">
-                    <a class="link color-yellow" href="https://space.bilibili.com/589321084" title="浏览我的视频" target="_blank">浏览我的视频</a>
+                    <a class="link color-yellow" href="https://space.bilibili.com/589321084" title="Meine Videos ansehen" target="_blank">Meine Videos ansehen</a>
 <!--                    <a class="link color-green" href="#" title="Tell me a secret" target="_blank">Tell me a secret</a>-->
 
-                    <a class="link color-red" href="http://jnw031.github.io/language" title="选择你的语言" target="_self">选择你的语言</a>
+                    <a class="link color-red" href="http://jnw031.github.io/language" title="Wählen Sie Ihre Sprache" target="_self">Wählen Sie Ihre Sprache</a>
                 </div>
             </main>
             <footer>
                 <div class="links">
-                    <a class="link small alt" href="mailto:lubswang@outlook.com" title=邮件 (@lubswang)" target="_blank">邮件</a>
-                    <a class="link small alt" href="https://www.cnblogs.com/jnw031/" title="Cnblogs (@jnw031)" target="_blank">博客</a>
+                    <a class="link small alt" href="mailto:lubswang@outlook.com" title=Post (@lubswang)" target="_blank">Post</a>
+                    <a class="link small alt" href="https://www.cnblogs.com/jnw031/" title="Blog (@jnw031)" target="_blank">Blog</a>
                     <a class="link small alt" href="https://github.com/jnw031" title="GitHub (@jnw031)" target="_blank">GitHub</a>
                 </div>
             </footer>
