--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <title>JNW031 - Persönliche Website</title>
+    <title>wjn031 - Persönliche Website</title>
     <link rel="shortcut icon" href="./favicon.ico" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Slab:700'>
@@ -6786,14 +6786,14 @@
                     <a class="link color-yellow" href="https://space.bilibili.com/589321084" title="Meine Videos ansehen" target="_blank">Meine Videos ansehen</a>
 <!--                    <a class="link color-green" href="#" title="Tell me a secret" target="_blank">Tell me a secret</a>-->
 
-                    <a class="link color-red" href="http://jnw031.github.io/language" title="Wählen Sie Ihre Sprache" target="_self">Wählen Sie Ihre Sprache</a>
+                    <a class="link color-red" href="http://wjn031.github.io/language" title="Wählen Sie Ihre Sprache" target="_self">Wählen Sie Ihre Sprache</a>
                 </div>
             </main>
             <footer>
                 <div class="links">
                     <a class="link small alt" href="mailto:lubswang@outlook.com" title=Post (@lubswang)" target="_blank">Post</a>
                     <a class="link small alt" href="https://www.cnblogs.com/jnw031/" title="Blog (@jnw031)" target="_blank">Blog</a>
-                    <a class="link small alt" href="https://github.com/jnw031" title="GitHub (@jnw031)" target="_blank">GitHub</a>
+                    <a class="link small alt" href="https://github.com/wjn031" title="GitHub (@wjn031)" target="_blank">GitHub</a>
                 </div>
             </footer>
         </div>
